# ntt-programming-language

./: CMakeLists.txt  README.md
PCBuild/Windows/MinGW/Debug/: b.bat  bm.bat  bmt.bat  g.bat  m.bat  t.bat
PCBuild/Windows/MinGW/Release/: b.bat  g.bat  m.bat  t.bat
PCBuild/Windows/VC17/: g.bat
cmake/: googletestConfig.cmake
examples/: CMakeLists.txt  manual.cpp
include/nttlang/: macros.h  nttlang.h  parser.h  tokenizer.h
include/nttlang/nodes/: base.h  float.h  integer.h  nodes.h  program.h  statement.h  string.h  types.h
include/nttlang/token/: base.h  float.h  identifier.h  integer.h  invalid_identifier.h  keyword.h  operator.h  parenthesis.h  separator.h  string.h  token.h  types.h  unknown.h
src/: node_float.cpp  node_integer.cpp  node_program.cpp  node_statement.cpp  node_string.cpp  parser.cpp  tokenizer.cpp
tests/: main.cpp  parser_test.cpp  tokenizer_test.cpp
